<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="7dp"
    android:paddingEnd="7dp"
    tools:context=".LoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login_Title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Email_Field_Hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/login_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Pass_Field_Hint"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/login_err"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorRed"
        android:visibility="invisible" />
    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_marginTop="7dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/login_btn"
            style="@style/buttonCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Btn_Login" />
    </com.balysv.materialripple.MaterialRippleLayout>
    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_marginTop="7dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/create_btn"
            style="@style/buttonCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login_Btn_Create" />
    </com.balysv.materialripple.MaterialRippleLayout>

</LinearLayout>