<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="7dp"
    android:paddingEnd="7dp"
    android:orientation="vertical"
    tools:context=".CreerProfilFragment">
    <TextView
        android:id="@+id/profil_form_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Profil_Create_Title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <EditText
        android:id="@+id/profil_form_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Username_Field_Hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/profil_form_username_err"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:textColor="@color/colorRed" />

    <Button
        android:id="@+id/profil_form_available_btn"
        style="@style/buttonCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/Username_Check" />

    <EditText
        android:id="@+id/profil_form_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Email_Field_Hint"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/profil_form_email_err"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:textColor="@color/colorRed" />

    <EditText
        android:id="@+id/profil_form_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Pass_Field_Hint"
        android:inputType="textPassword" />

    <ProgressBar
        android:id="@+id/profil_form_pass_strength"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/profil_form_pass_strength_indic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/profil_form_pass_err"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:textColor="@color/colorRed" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Avatar_Title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginBottom="5dp"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/profil_form_file_btn"
                style="@style/buttonCustom"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_file_upload_color"
                android:padding="10dp"
                android:text="@string/Avatar_Download" />
    </com.balysv.materialripple.MaterialRippleLayout>

    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profil_form_avatar_preview"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:src="@drawable/ic_launcher_background"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="0dp" />
    <com.balysv.materialripple.MaterialRippleLayout
    android:layout_width="match_parent"
        android:layout_marginTop="7dp"
    android:layout_height="wrap_content">

        <Button
            android:id="@+id/profil_form_btn_confirm"
            style="@style/buttonCustom"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Profil_Create_Btn" />
    </com.balysv.materialripple.MaterialRippleLayout>

</LinearLayout>