<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".DialogPlainteFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Dialog_Flag_Title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="18sp" />

    <EditText
        android:layout_marginTop="5dp"
        android:id="@+id/plainte_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Dialog_Flag_Hint"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/plainte_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/Gen_Empty_Field"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorRed"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">

        <Button
            android:id="@+id/plainte_confirm"
            style="@style/buttonNoBorderCustom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:text="@string/Dialog_Flag_Done" />
        </com.balysv.materialripple.MaterialRippleLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/LightGrey"/>
        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/plainte_cancel"
            style="@style/buttonNoBorderCustom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Mng_Profil_Cancel"
            android:textColor="@color/colorRed" />
        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>
</LinearLayout>