<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingEnd="7dp"
    android:paddingStart="7dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sondage_edit_num_quest"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_weight="3" />
        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/sondage_edit_question_delete"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/round_btn"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:src="@drawable/ic_delete"
                android:contentDescription="@string/Create_Question_Elem_Delete_Desc"
                android:tint="@color/colorRed" />
        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/sondage_edit_question_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Create_Question_Elem_TextField_Hint"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_edit_texte_error"
        android:visibility="invisible"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorRed" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Create_Question_Elem_Type_Tag"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="18sp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:id="@+id/sondage_edit_question_type" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_edit_type_error"
        android:visibility="invisible"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorRed" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Create_Question_Elem_Option_Tag"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_edit_options_error"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:visibility="invisible"
        android:textColor="@color/colorRed" />
    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/question_edit_dropdown_button"
            style="@style/buttonCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_fleche_droite"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/Create_Question_Elem_Option_Btn" />
    </com.balysv.materialripple.MaterialRippleLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/LightGrey"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

</LinearLayout>