<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="7dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/list_item_bg"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sondage_edit_option_num"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_weight="1" />
        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/sondage_edit_option_delete"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:background="@drawable/round_btn"
                android:contentDescription="@string/Create_Option_Elem_Delete_Desc"
                android:scaleType="centerInside"
                android:src="@drawable/ic_delete"
                android:tint="@color/colorRed" />
        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>

    <EditText
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/sondage_edit_option_texte"
        android:hint="@string/Create_Option_Elem_TextField_Hint" />

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/option_edit_texte_error"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:visibility="invisible"
        android:textColor="@color/colorRed" />

    <RelativeLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sondage_edit_option_upload">
        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="wrap_content"
            app:mrl_rippleOverlay="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content">
        <Button

            android:id="@+id/sondage_edit_option_upload_btn"
            style="@style/buttonCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_file_upload_color"
            android:padding="10dp"
            android:text="@string/Create_Option_Elem_BtnUpload" />
    </com.balysv.materialripple.MaterialRippleLayout>



    </RelativeLayout>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/option_edit_media_error"
        android:visibility="invisible"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorRed" />

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/option_edit_instruct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" />
    <ProgressBar
        android:id="@+id/sondage_edit_option_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:theme="@style/LoaderAccent"/>

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp">
            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="wrap_content"
                app:mrl_rippleOverlay="true"
                android:id="@+id/EditOptRipple"
                android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_menu_gallery"
                        android:adjustViewBounds="true"
                        android:cropToPadding="false"
                        android:visibility="gone"
                        android:maxHeight="128dp"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/Poll_Answ_Option_Img_Desc"
                        android:id="@+id/sondage_edit_option_image_preview" />
            </com.balysv.materialripple.MaterialRippleLayout>
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_loupe_black_24dp"
                android:tint="#fff"
                android:background="@drawable/round_btn"
                android:padding="5dp"
                android:layout_alignEnd="@id/EditOptRipple"
                android:layout_alignBottom="@id/EditOptRipple"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/Poll_Answ_Option_Img_Icon_Desc"
                android:layout_marginEnd="5dp"
                android:visibility="gone"
                android:id="@+id/sondage_edit_option_image_preview_icon"/>
        </RelativeLayout>



</LinearLayout>